feat(data): ddd4j-data 聚合根 pom 补全——19 个子模块从 pre-sync 恢复并纳入 reactor
用户指出 ddd4j-data/pom.xml 未建好：聚合根只声明 13 个模块，物理存在的
31 个子目录中 19 个游离在 reactor 外。

## 恢复/迁移（内容取自 1240dd4c pre-sync JDK8/javax 线）

组A（同路径恢复，pre-sync 聚合根已有）：cqrs / cqrs-helidon / cqrs-micronaut /
cqrs-quarkus / event-store-panache / data-jpa / projection-helidon /
projection-micronaut / projection-quarkus / projection-panache

组B（pre-sync 顶层 javax 变体迁入聚合根路径，parent 改 ddd4j-data）：
cqrs-spring / event-store-{esdb,jdbi,jpa,r2dbc} / projection /
projection-{jdbi,jpa,r2dbc,spring}

## 聚合根 modules：13 → 28 个

## 编译适配（JDK8）
- data-jpa：jakarta.persistence 3.1.0 → 3.0.0（3.1 为 Java 11 字节码）；
  getSingleResultOrNull (JPA3.1) → getResultList 取首元素；
  toArray(Predicate[]::new)（JDK11 Collection 重载）→ toArray(new Predicate[0])；
  stream.toList() → collect；switch 箭头 → 传统；instanceof pattern → cast
- data-jpa crypto：instanceof pattern → cast（JpaEncryptFieldListener×2）
- event-store-jpa/jdbi/r2dbc + projection*：EventStoreConstants import
  从 core.cqrs.eventstore → core.constant（现 core 布局）
- cqrs-micronaut/projection-micronaut：micronaut-platform 3.10.10（坐标不存在，
  Micronaut3 用 micronaut-bom）→ io.micronaut:micronaut-bom；补 test 依赖
- BOM：+ jakarta.inject-api 2.0.1 / javax.inject:1 管理
- runtime-helidon：+ javax.inject:1 (provided)（jakarta.inject 2.0.1 包名已
  改 jakarta.inject，不满足源码 import javax.inject）
- auth-datascope DataScopeProvider：default hasPermissions → 抽象方法
  （使其成为函数接口，与 data-datascope/otel 测试 lambda 用法一致）；
  DataScopeAutoConfiguration 默认 Bean 改 lambda（保留非空语义）

## 仍排除（允许轴）
- Quarkus/Panache ×4（需 JDK17+，quarkus-bom 不在 1.0.x BOM）
- Helidon 适配器 ×2（helidon-common-service-loader 2.6.14 构件为 Java 11
  字节码 major 55，JDK 8 无法编译；web-helidon 主代码不受影响——其依赖
  不同构件）

mvn clean install -DskipTests BUILD SUCCESS（1:24）