@@ -1,8 +1,5 @@
 package io.ddd4j.data.cqrs.helidon;
 
-import java.util.Collections;
-import java.util.Arrays;
-import java.util.LinkedHashSet;
 import io.ddd4j.core.cqrs.command.Command;
 import io.ddd4j.core.cqrs.command.CommandExecutor;
 import io.ddd4j.core.cqrs.command.Result;
@@ -107,7 +104,7 @@ class HelidonCommandBusIT {
 
         @Override
         public Set<Class<? extends Command>> supportedCommands() {
-            return Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList(SampleCommand.class, CompanionCommand.class)));
+            return Set.of(SampleCommand.class, CompanionCommand.class);
         }
 
         @Override
