@@ -1,6 +1,5 @@
 package io.ddd4j.data.cqrs.quarkus;
 
-import java.util.Arrays;
 import io.ddd4j.core.cqrs.command.CommandExecutor;
 import io.ddd4j.core.cqrs.command.DefaultCommandBus;
 import io.ddd4j.data.cqrs.CommandHandler;
@@ -87,7 +86,7 @@ public class QuarkusCommandBus extends DefaultCommandBus {
      * {@link #QuarkusCommandBus(Instance)} 装配。
      */
     protected QuarkusCommandBus() {
-        super(Arrays.asList());
+        super(List.of());
     }
 
     private static Collection<CommandExecutor<?>> collect(Instance<CommandExecutor<?>> executors) {
