@@ -1,6 +1,5 @@
 package io.ddd4j.data.cqrs.quarkus;
 
-import java.util.Collections;
 import io.ddd4j.core.cqrs.command.Command;
 import io.ddd4j.core.cqrs.command.CommandExecutor;
 import io.ddd4j.core.cqrs.command.Result;
@@ -29,7 +28,7 @@ class SampleCommandHandler implements CommandExecutor<SampleCommand> {
 
     @Override
     public Set<Class<? extends Command>> supportedCommands() {
-        return Collections.singleton(SampleCommand.class);
+        return Set.of(SampleCommand.class);
     }
 
     @Override
