@@ -14,7 +14,6 @@
  */
 package io.ddd4j.data.event.store.panache;
 
-import java.util.Arrays;
 import io.ddd4j.core.cqrs.eventstore.AggregateVersionConflictException;
 import io.ddd4j.core.cqrs.eventstore.EventStore;
 import io.ddd4j.core.ddd.event.AggregateRootId;
@@ -140,7 +139,7 @@ class PanacheEventStoreRetryTest {
     @Test
     void append_成功路径_不触发Sleeper() {
         TestAggregateRootId orderId = new TestAggregateRootId("agg-1");
-        eventStore.append(ORDER_TYPE, orderId, Arrays.asList(new TestEvent(orderId)), 0L);
+        eventStore.append(ORDER_TYPE, orderId, List.of(new TestEvent(orderId)), 0L);
 
         assertThat(sleeper.calls.get()).isZero();
         assertThat(eventStore.read(ORDER_TYPE, orderId)).hasSize(1);
@@ -149,10 +148,10 @@ class PanacheEventStoreRetryTest {
     @Test
     void append_期望版本不匹配_强类型冲突异常_不触发重试_事务回滚() {
         TestAggregateRootId orderId = new TestAggregateRootId("agg-1");
-        eventStore.append(ORDER_TYPE, orderId, Arrays.asList(new TestEvent(orderId)), 0L);
+        eventStore.append(ORDER_TYPE, orderId, List.of(new TestEvent(orderId)), 0L);
 
         assertThatThrownBy(() ->
-                eventStore.append(ORDER_TYPE, orderId, Arrays.asList(new TestEvent(orderId)), 99L))
+                eventStore.append(ORDER_TYPE, orderId, List.of(new TestEvent(orderId)), 99L))
                 .isInstanceOf(AggregateVersionConflictException.class);
 
         assertThat(sleeper.calls.get())
@@ -174,7 +173,7 @@ class PanacheEventStoreRetryTest {
         // （FaultInjector 仅第一次抛错，第二次透传真实 SQL；Hibernate 事务 rollback
         // 后 EntityManager 状态清空，重试走全新事务）
         TestAggregateRootId orderId = new TestAggregateRootId("agg-conflict");
-        eventStore.append(ORDER_TYPE, orderId, Arrays.asList(new TestEvent(orderId)), 0L);
+        eventStore.append(ORDER_TYPE, orderId, List.of(new TestEvent(orderId)), 0L);
 
         // 关键断言 1：Sleeper 至少被调用 1 次（即重试机制确实触发过）
         assertThat(sleeper.calls.get())
@@ -187,32 +186,13 @@ class PanacheEventStoreRetryTest {
     @Test
     void append_空事件列表_不触发Sleeper_不落库() {
         TestAggregateRootId orderId = new TestAggregateRootId("agg-empty");
-        eventStore.append(ORDER_TYPE, orderId, Arrays.asList(), 0L);
+        eventStore.append(ORDER_TYPE, orderId, List.of(), 0L);
 
         assertThat(sleeper.calls.get()).isZero();
         assertThat(eventStore.read(ORDER_TYPE, orderId)).isEmpty();
-    }static final class TestAggregateRootId implements AggregateRootId {
-        private final String value;
+    }
 
-        public TestAggregateRootId(String value) {
-            this.value = value;
-        }
-        public String value() { return value; }
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (!(o instanceof TestAggregateRootId)) return false;
-            TestAggregateRootId other = (TestAggregateRootId) o;
-            return Objects.equals(this.value, other.value);
-        }
-        @Override
-        public int hashCode() {
-            return java.util.Objects.hash(value);
-        }
-        @Override
-        public String toString() {
-            return "TestAggregateRootId{" + "value=" + value + "}";
-        }
+    record TestAggregateRootId(String value) implements AggregateRootId {
         private static final EntityType TYPE = new StringEntityType("Order");
 
         @Override
@@ -229,7 +209,6 @@ class PanacheEventStoreRetryTest {
         public String asTypedString() {
             return TYPE.asString() + ":" + value;
         }
-    
     }
 
     static final class TestEvent extends DomainEvent<TestAggregateRootId> {
