@@ -1,6 +1,5 @@
 package io.ddd4j.data.projection.quarkus;
 
-import java.util.Collections;
 import io.ddd4j.core.cqrs.readmodel.*;
 import io.quarkus.test.junit.QuarkusTest;
 import jakarta.enterprise.context.ApplicationScoped;
@@ -145,7 +144,7 @@ class QuarkusProjectionSchedulerIT {
 
         @Override
         public Collection<String> getEventTypes() {
-            return Collections.singleton("TestEvent");
+            return Set.of("TestEvent");
         }
 
         @Override
