@@ -172,12 +172,12 @@ public class ProjectionDispatcher {
 
     /**
      * 流式拉取的生成器状态：投影位置 + 当前事件块 + 块内游标。
-     */private static final class Cursor  {
+     */
+    private static final class Cursor {
         private final long position;
         private final EventChunk<DomainEvent<?>> chunk;
         private final int index;
-
-        public Cursor(long position, EventChunk<DomainEvent<?>> chunk, int index) {
+        Cursor(long position, EventChunk<DomainEvent<?>> chunk, int index) {
             this.position = position;
             this.chunk = chunk;
             this.index = index;
@@ -185,25 +185,13 @@ public class ProjectionDispatcher {
         public long position() { return position; }
         public EventChunk<DomainEvent<?>> chunk() { return chunk; }
         public int index() { return index; }
-        @Override
-        public boolean equals(Object o) {
-            if (this == o) return true;
-            if (!(o instanceof Cursor)) return false;
-            Cursor other = (Cursor) o;
-            return Objects.equals(this.position, other.position) && Objects.equals(this.chunk, other.chunk) && Objects.equals(this.index, other.index);
-        }
-        @Override
-        public int hashCode() {
-            return java.util.Objects.hash(position, chunk, index);
-        }
-        @Override
-        public String toString() {
-            return "Cursor{" + "position=" + position + ", " + "chunk=" + chunk + ", " + "index=" + index + "}";
-        }
+        @Override public boolean equals(Object o) { return this == o || (o instanceof Cursor && position == ((Cursor)o).position && java.util.Objects.equals(chunk, ((Cursor)o).chunk) && index == ((Cursor)o).index); }
+        @Override public int hashCode() { return java.util.Objects.hash(position, chunk, index); }
+        @Override public String toString() { return "Cursor{position=" + position + ", chunk=" + chunk + ", index=" + index + "}"; }
+
         static Cursor start(long position) {
             return new Cursor(position, null, 0);
         }
-    
     }
 
     private void commitPosition(String streamId) {
@@ -224,6 +212,6 @@ public class ProjectionDispatcher {
     private Collection<String> eventTypeNames(ProjectionHandler handler) {
         return handler.eventTypes().stream()
                 .map(Class::getSimpleName)
-                .toList();
+                .collect(java.util.stream.Collectors.toList());
     }
 }
