@@ -1,8 +1,5 @@
 package io.ddd4j.data.projection;
 
-import java.util.Collections;
-import java.util.Arrays;
-import java.util.LinkedHashSet;
 import io.ddd4j.core.ddd.event.DomainEvent;
 
 import java.util.Collection;
@@ -37,7 +34,7 @@ import java.util.Collection;
  *
  *     &#64;Override
  *     public Collection<Class<? extends DomainEvent<?>>> eventTypes() {
- *         return Collections.unmodifiableSet(new LinkedHashSet<>(Arrays.asList(OrderCreated.class, OrderPaid.class)));
+ *         return Set.of(OrderCreated.class, OrderPaid.class);
  *     }
  *
  *     &#64;Override
